package gl.frames;

import gl.frames.rules.Frame;

public class GLFrame extends Frame {
	/**
	 * Créer une fenêtre de rendu OpenGL
	 */
	public GLFrame() {
		super();
	}
}
